...
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="18dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp">

        <Button
            android:id="@+id/next_button"
            style="@android:style/Widget.DeviceDefault.Button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/next_button_text"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/previous_button"
            android:layout_width="140dp"
            android:layout_height="wrap_content"
            android:text="@string/previous_button_step"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
...
