<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/widget_button"
        android:title="@string/add_to_widget_button"
        app:showAsAction="ifRoom" />
</menu>